api-fastapi/base/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-api
  annotations:
    # Group name is overridden per overlay (platform-dev, platform-uat, platform-prod) for one ALB per environment.
    alb.ingress.kubernetes.io/group.name: platform-prod
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/success-codes: "200"

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:918780499156:certificate/df2a7f48-c4a9-451b-a838-43e311219e67
    alb.ingress.kubernetes.io/ssl-redirect: "443"

    external-dns.alpha.kubernetes.io/hostname: origin-weather.cloud-master-ai.com

    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
spec:
  ingressClassName: alb
  rules:
    - host: origin-weather.cloud-master-ai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-api
                port:
                  number: 80
